# decision-canvas

./: .gitignore  AGENTS.md  README.md  render.yaml
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routes_analysis.py  routes_system.py  routes_upload.py
backend/app/core/: __init__.py  config.py
backend/app/models/: __init__.py  base.py  charts.py  dashboard.py  dataset.py  findings.py  question.py
backend/app/services/: analysis_engine.py  csv_ingestion.py  insight_engine.py  metric_engine.py  profiling_service.py  question_parser.py  question_router.py  report_generator.py  semantic_inference.py  summary_generator.py  visualization_planner.py
backend/app/utils/: export_schemas.py
backend/decisioncanvas_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api_flow.py  test_dashboard_flow.py  test_profiling.py  test_question_parser.py  test_schemas.py
data/: ecommerce_demo.csv
docs/: demo-script.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/scripts/: validate-flow.mjs
frontend/src/: main.tsx
frontend/src/app/: App.tsx  WorkspaceContext.tsx  router.tsx
frontend/src/hooks/: useDatasetAnalysis.ts
frontend/src/pages/: LandingPage.tsx  ResultsPage.tsx  WorkspacePage.tsx
frontend/src/services/: api.ts
frontend/src/types/: ui.ts  (+2 more)
shared/examples/: sample-dashboard.json
shared/schemas/: chart-spec.schema.json  dashboard.schema.json  dataset-profile.schema.json  executive-summary.schema.json  finding.schema.json
(+17 files in other folders)
