[project]
name = "decisioncanvas-backend"
version = "0.1.0"
description = "FastAPI backend for DecisionCanvas"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pandas>=2.2.0,<3.0.0",
  "numpy>=2.0.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "scipy>=1.14.0,<2.0.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["app"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
